# speechmatics-caption-obs

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.en.md  README.md  buildspec.json
.github/actions/build-plugin/: action.yaml
.github/actions/package-plugin/: action.yaml
.github/scripts/: .Brewfile  build-macos  package-macos
.github/workflows/: build-project.yaml  push.yaml
docs/: ARCHITECTURE.md
src/: plugin-main.cpp
